syntax = "proto3";

package user;
option go_package = "./proto";

service UserService {
    rpc GetUserById (UserRequest) returns (User);
    rpc GetUsersByIds (UserIdsRequest) returns (stream User);
}

message UserRequest {
    int32 id = 1;
}

message UserIdsRequest {
    repeated int32 ids = 1;
}

message User {
    int32 id = 1;
    string fname = 2;
    string city = 3;
    int64 phone = 4;
    float height = 5;
    bool married = 6;
}
